Day7/ingress/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tektutor-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: training.tektutor.org  
    http:
      paths:
        - pathType: Prefix
          path: /nginx
          backend:
            service:
              name: nginx
              port:
                number: 8080

        - pathType: Prefix
          path: /hello
          backend:
            service:
              name: hello 
              port:
                number: 8080
